# agent

./: Cargo.toml  config.toml
.github/workflows/: package-wit.yml  package.yml
src/: bindings.rs  lib.rs
wit/: world.wit
wit/tools/: world.wit
