[package]
name = "unit-agent"
version = "0.3.4"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component.target.dependencies]
"promptrs:client" = "0.2.0"
"promptrs:parser" = "0.2.0"
"promptrs:tools" = { path = "wit/tools" }
